Added references and minor edits to both SRS and project charter

--- a/Charter/reference/refs.bib
+++ b/Charter/reference/refs.bib
@@ -20,3 +20,47 @@ title = {{DOD Sample Phase I Proposal}},
 url = {http://www.acq.osd.mil/osbp/sbir/sb/resources/sample-proposals.shtml},
 year = {2011}
 }
+@book{Rubin2012,
+author = {Rubin, Kenneth S},
+edition = {1st},
+isbn = {0137043295, 9780137043293},
+publisher = {Addison-Wesley Professional},
+title = {{Essential Scrum: A Practical Guide to the Most Popular Agile Process}},
+year = {2012}
+}
+
+@misc{mountainglenharpsLaserHarps,
+	author = {},
+	title = {{L}aser {H}arps {O}verview --- mountainglenharps.com},
+	howpublished = {\url{ https://mountainglenharps.com/laser-harps/}},
+	year = {},
+	note = {[Accessed 07-07-2024]},
+}
+@misc{makezineBuildTwoOctave,
+	author = {},
+	title = {{B}uild a {T}wo-{O}ctave {L}aser {H}arp --- makezine.com},
+	howpublished = {\url{ https://makezine.com/projects/build-two-octave-laser-harp/}},
+	year = {},
+	note = {[Accessed 07-07-2024]},
+}
+@misc{makezineLaserHarp,
+	author = {},
+	title = {{L}aser {H}arp --- makezine.com},
+	howpublished = {\url{ https://makezine.com/projects/laser-harp/}},
+	year = {},
+	note = {[Accessed 07-07-2024]},
+}
+@misc{instructablesUprightLaser,
+	author = {},
+	title = {{U}pright {L}aser {H}arp --- instructables.com},
+	howpublished = {\url{ https://www.instructables.com/Upright-Laser-Harp/}},
+	year = {},
+	note = {[Accessed 07-07-2024]},
+}
+@misc{youtubeLaserHarp,
+	author = {},
+	title = {{L}aser {H}arp {A}rduino {L}eonardo | {M}{I}{D}{I} | {D}{I}{Y} | {J}ulius {K}ramer --- youtube.com},
+	howpublished = {\url{ https://www.youtube.com/watch?v=KuJOEJJIQXM}},
+	year = {},
+	note = {[Accessed 07-07-2024]},
+}
