--- a/Charter/tex/related_work.tex
+++ b/Charter/tex/related_work.tex
@@ -1,13 +1,11 @@
 The concept of a Laser Harp has intrigued and inspired musicians and technologists for decades. A Laser Harp, at its core, is an electronic musical instrument that uses laser beams in place of traditional strings. The instrument can be designed with varying levels of complexity, making it versatile enough to cater to different audiences and purposes. This flexibility allows for both simple designs suitable for educational demonstrations and sophisticated versions for professional performances.
 
-Commercially available Laser Harps are often marketed as novelty items, designed to replicate the look and feel of a traditional harp. These products are typically aimed at enthusiasts and collectors, offering a unique blend of visual spectacle and musical capability. For instance, the professional stores offers Laser Harps that mimic the playing experience of traditional harps, providing a visually stunning performance tool that captures the imagination of audiences.
+Commercially available Laser Harps are often marketed as novelty items, designed to replicate the look and feel of a traditional harp. These products are typically aimed at enthusiasts and collectors, offering a unique blend of visual spectacle and musical capability. For instance, professional stores offer Laser Harps that mimic the playing experience of traditional harps,\cite{makezineLaserHarp} providing a visually stunning performance tool that captures the imagination of audiences.
 
-On the other end of the spectrum, some Laser Harps function more like laser theremins. In these versions, each "string" is akin to an individual theremin, producing a note when the laser beam is interrupted. This design not only creates the illusion of playing a traditional harp but also allows for a unique interaction between the performer and the instrument. An example of this can be seen as a laser theramin , which showcases the innovative use of laser technology to create music.
+On the other end of the spectrum, some Laser Harps function more like laser theremins.\cite{mountainglenharpsLaserHarps} In these versions, each "string" is akin to an individual theremin, producing a note when the laser beam is interrupted. This design not only creates the illusion of playing a traditional harp but also allows for a unique interaction between the performer and the instrument. An example of this can be seen as a laser theremin, which showcases the innovative use of laser technology to create music.
 
-Many Laser Harps are also created as individual projects by hobbyists and technology enthusiasts. These DIY versions serve as proof of concept, demonstrating the feasibility of building a Laser Harp with relatively accessible resources and technical know-how. Various online communities and maker spaces feature projects where individuals share their designs and experiences, highlighting the educational and inspirational potential of these instruments.
+Many Laser Harps are also created as individual projects by hobbyists and technology enthusiasts.\cite{makezineBuildTwoOctave} These DIY versions serve as proof of concept, demonstrating the feasibility of building a Laser Harp with relatively accessible resources and technical know-how. Various online communities and maker spaces feature projects where individuals share their designs and experiences, highlighting the educational and inspirational potential of these instruments.
 
-Given that most existing Laser Harps are either commercial products or one-off personal projects, there is a compelling case for developing a custom Laser Harp specifically for educational purposes. A smaller, portable Laser Harp tailored for school demonstrations can effectively showcase the intersection of music, science, and technology. Such an instrument can serve as an engaging tool to spark students' interest in STEM (Science, Technology, Engineering, and Mathematics) fields. By illustrating the principles of laser technology, electronic music production, and hands-on engineering, a custom Laser Harp can inspire the next generation of innovators and creators.
+Given that most existing Laser Harps are either commercial products or one-off personal projects, there is a compelling case for developing a custom Laser Harp specifically for educational purposes. A smaller, portable Laser Harp tailored for school demonstrations can effectively showcase the intersection of music, science, and technology. Such an instrument can serve as an engaging tool to spark students' interest in STEM (Science, Technology, Engineering, and Mathematics) fields.\cite{youtubeLaserHarp} By illustrating the principles of laser technology, electronic music production, and hands-on engineering, a custom Laser Harp can inspire the next generation of innovators and creators.
 
-In conclusion, while the idea of a Laser Harp is not new, its application as an educational tool presents a unique opportunity. Creating a custom Laser Harp for schools not only aligns with the tradition of innovation within this space but also expands its reach and impact, making the wonders of technology accessible and exciting for young learners.
-
-ProTip: Consider using a citation manager such as Mendeley, Zotero, or EndNote to generate your \textit{.bib} file and maintain documentation references throughout the life cycle of the project.
+While the idea of a Laser Harp is not new, its application as an educational tool presents a unique opportunity. Creating a custom Laser Harp for schools not only aligns with the tradition of innovation within this space but also expands its reach and impact, making the wonders of technology accessible and exciting for young learners.
