--- a/system requirements specification LaTeX/system_requirements_specification.tex
+++ b/system requirements specification LaTeX/system_requirements_specification.tex
@@ -84,11 +84,10 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{0.1}{10.01.2015}{GH}{document creation}
-  	\vhEntry{0.2}{10.05.2015}{AT|GH}{complete draft}
-  	\vhEntry{0.3}{10.12.2015}{AT|GH}{release candidate 1}
-  	\vhEntry{1.0}{10.20.2015}{AT|GH|CB}{official release}
-  	\vhEntry{1.1}{10.31.2015}{AL}{added customer change requests}
+	\vhEntry{0.1}{07.06.2024}{MM}{Document creation}
+	\vhEntry{0.2}{07.06.2024}{MM|SA}{Complete draft}
+	\vhEntry{0.3}{07.07.2024}{SA|TP}{References added}
+	\vhEntry{1.0}{10.20.2015}{MM|SA|TP|AT}{Official release}
 \end{versionhistory}
 \newpage
 
