--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -109,14 +109,14 @@
 \section{Subsystem Definitions \& Data Flow}
 \input{tex/data_flow.tex}
 \newpage
-\section{X Layer Subsystems}
-\input{tex/x_layer_subsystems.tex}
+\section{Input Layer Subsystems}
+\input{tex/input_layer_subsystems.tex}
 \newpage
-\section{Y Layer Subsystems}
-\input{tex/y_layer_subsystems.tex}
+\section{Control Unit Layer Subsystems}
+\input{tex/control_unit_layer_subsystems.tex}
 \newpage
-\section{Z Layer Subsystems}
-\input{tex/z_layer_subsystems.tex}
+\section{Output Layer Subsystems}
+\input{tex/output_layer_subsystems.tex}
 \newpage
 
 %%% References
