--- a/architectural design specification latex/tex/output_layer_subsystems.tex
+++ b/architectural design specification latex/tex/output_layer_subsystems.tex
@@ -5,7 +5,7 @@ This section should be a general description of a particular subsystem for the g
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/subsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/OutputSubsystem}
  \caption{Example subsystem description diagram}
 \end{figure}
 
@@ -35,4 +35,3 @@ Repeat for each subsystem
 
 \subsection{Subsystem 3}
 Repeat for each subsystem
-
