--- a/architectural design specification latex/tex/system_overview.tex
+++ b/architectural design specification latex/tex/system_overview.tex
@@ -2,7 +2,7 @@ This section should describe the overall structure of your software system. Thin
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/layers}
+ 	\includegraphics[width=0.60\textwidth]{images/Layers}
  \caption{A simple architectural layer diagram}
 \end{figure}
 
