--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -85,7 +85,10 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{1}{07.24.2024}{GH}{document creation}
+  	\vhEntry{1}{07.22.2024}{MM}{document creation}
+	\vhEntry{1}{07.22.2024}{MM,TP}{Version .8}
+	\vhEntry{1}{07.22.2024}{GH}{document creation}
+	\vhEntry{1}{07.23.2024}{MM||TP||AT||SA}{document creation}
 \end{versionhistory}
 \newpage
 
