--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -31,7 +31,7 @@
 \newcommand{\productname}{Laser Harp}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
 \newcommand{\semester}{Summer 2024}
-\newcommand{\docname}{Project Charter}
+\newcommand{\docname}{Architectural Design Specification}
 \newcommand{\department}{Department of Computer Science \& Engineering}
 \newcommand{\university}{The University of Texas at Arlington}
 \newcommand{\authors}{Simon Aguirre \\ Matthew Moran \\ Thomas Pinkney \\ Alex Tran}
@@ -86,9 +86,7 @@
 %%% Revision History
 \begin{versionhistory}
   	\vhEntry{1}{07.22.2024}{MM}{document creation}
-	\vhEntry{1}{07.22.2024}{MM,TP}{Version .8}
-	\vhEntry{1}{07.22.2024}{GH}{document creation}
-	\vhEntry{1}{07.23.2024}{MM||TP||AT||SA}{document creation}
+	\vhEntry{1.1}{07.24.2024}{MM||TP||AT||SA}{document submission}
 \end{versionhistory}
 \newpage
 
