--- a/architectural design specification latex/tex/introduction.tex
+++ b/architectural design specification latex/tex/introduction.tex
@@ -1,10 +1,10 @@
 The laser harp is a novel musical instrument that utilizes laser beams to simulate the strings of a traditional harp. By interrupting these laser beams, users can produce corresponding musical notes, creating an engaging and interactive experience. This product is designed to be both educational and entertaining, aiming to inspire interest in STEM fields while providing a unique musical platform for enthusiasts and musicians.
 
-\section{Product Concept}
+\subsection{Product Concept}
 
 The laser harp operates by projecting laser beams vertically from an array of laser emitters placed at the base. These beams are aligned with corresponding phototransistors positioned above, which detect the presence or absence of the laser light. When a user interrupts a laser beam by placing their hand in its path, the phototransistor detects the interruption and sends a signal to a microcontroller or a Raspberry Pi. The microcontroller processes this signal and triggers the playback of a pre-recorded musical note corresponding to the interrupted beam.
 
-\section{Scope}
+\subsection{Scope}
 
 The scope of the laser harp project includes the design, development, and testing of a functional prototype that can demonstrate the key features and capabilities of the product. The project encompasses the following components:
 \begin{itemize}
@@ -15,7 +15,7 @@ The scope of the laser harp project includes the design, development, and testin
     \item \textbf{Power Supply:} A reliable power source to ensure continuous operation of the laser harp.
 \end{itemize}
 
-\section{Key Requirements}
+\subsection{Key Requirements}
 
 \begin{itemize}
     \item \textbf{Real-time Sound Playback:} The system must produce sound immediately upon the interruption of a laser beam, ensuring a responsive playing experience.
