--- a/architectural design specification latex/tex/output_layer_subsystems.tex
+++ b/architectural design specification latex/tex/output_layer_subsystems.tex
@@ -1,7 +1,4 @@
-In this section, the layer is described in some detail in terms of its specific subsystems. Describe each of the layers and its subsystems in a separate chapter/major subsection of this document. The content of each subsystem description should be similar. Include in this section any special considerations and/or trade-offs considered for the approach you have chosen.
-
-\subsection{Subsystem 1}
-This section should be a general description of a particular subsystem for the given layer. For most subsystems, an extract of the architectural block diagram with data flows is useful. This should consist of the subsystem being described and those subsystems with which it communicates.
+This section describes the subsystems within the Output Layer, responsible for providing user feedback through visual and audio channels.
 
 \begin{figure}[h!]
 	\centering
@@ -9,14 +6,30 @@ This section should be a general description of a particular subsystem for the g
  \caption{Example subsystem description diagram}
 \end{figure}
 
+\subsection{Speaker}
+The speaker subsystem connected to the Sound Multiplexer
+
 \subsubsection{Assumptions}
-Any assumptions made in the definition of the subsystem should be listed and described. Pay particular attention to assumptions concerning interfaces and interactions with other layers.
+\begin{itemize}
+\begin{item}
+The Speaker subsystem receives analog signals from the Sound Multiplexer
+\end{item}
+\begin{item}
+The Speaker subsystem is responsible for converting the analog signals into audible sound.
+\end{item}
+\end{itemize}
 
 \subsubsection{Responsibilities}
-Each of the responsibilities/features/functions/services of the subsystem as identified in the architectural summary must be expanded to more detailed responsibilities. These responsibilities form the basis for the identification of the finer-grained responsibilities of the layer's internal subsystems. Clearly describe what each subsystem does.
+\begin{itemize}
+\begin{item}
+Receive analog signals representing the final sound output from the Sound Multiplexer 
+\end{item}
+\begin{item}
+onvert the analog signals into audible sound
+\end{item}
+\end{itemize}
 
 \subsubsection{Subsystem Interfaces}
-Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
 
 \begin {table}[H]
 \caption {Subsystem interfaces} 
@@ -24,14 +37,42 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#1 & representing the final sound output from the Sound Multiplexer & \pbox{3cm}{Analog signals representing the final sound output} & \pbox{3cm}{Audible sound}  \\ \hline
+   
     \end{tabular}
 \end{center}
 \end{table}
 
-\subsection{Subsystem 2}
-Repeat for each subsystem
+\subsection{Touchscreen}
+The Touchscreen subsystem connected to the Control Unit
+\subsubsection{ASSUMPTIONS}
+\begin{itemize}
+\begin{item}
+The Touchscreen subsystem receives digital signals from the Control Unit
+\end{item}
+\begin{item}
+The Touchscreen subsystem is responsible for displaying visual information to the user.
+\end{item}
+\end{itemize}
+\subsubsection{RESPONSIBILITIES}
+\begin{itemize}
+\begin{item}
+Receive digital signals from the Control Unit representing the visual information to be displayed
+\end{item}
+\begin{item}
+Display the received information on the touchscreen
+\end{item}
+\end{itemize}
 
-\subsection{Subsystem 3}
-Repeat for each subsystem
+\subsubsection{SUBSYSTEM INTERFACES}
+
+\begin {table}[H]
+\caption {Subsystem interfaces} 
+\begin{center}
+    \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
+    \hline
+    ID & Description & Inputs & Outputs \\ \hline
+    \#1 & The Touchscreen subsystem receives digital signals from the Control Unit & \pbox{3cm}{Digital signals representing visual information} & \pbox{3cm}{Visual information displayed on the touchscreen}  \\ \hline
+    \end{tabular}
+\end{center}
+\end{table}
