Minor edits and better subsystem diagrams

--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -85,8 +85,8 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{1}{07.22.2024}{MM}{document creation}
-	\vhEntry{1.1}{07.24.2024}{MM||TP||AT||SA}{document submission}
+	\vhEntry{1}{07.22.2024}{MM}{document creation}
+	\vhEntry{1.1}{07.24.2024}{MM  TP  AT  SA}{document submission}
 \end{versionhistory}
 \newpage
 
