--- a/architectural design specification latex/tex/input_layer_subsystems.tex
+++ b/architectural design specification latex/tex/input_layer_subsystems.tex
@@ -6,7 +6,7 @@ The laser Diode subsystem is a hardware component in which the user can interact
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/InputSubsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/Laserdiodes}
  \caption{Laser Diodes Subsystem}
 \end{figure}
 
@@ -39,7 +39,7 @@ The Dials are a subsystem which interacts with the Control unit in order to chan
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/InputSubsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/Dials}
  \caption{Dials}
 \end{figure}
 
@@ -70,7 +70,7 @@ Buttons are used to change octaves or interact with different areas of the contr
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/InputSubsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/Buttons}
  \caption{Buttons}
 \end{figure}
 
@@ -101,7 +101,7 @@ The touchscreen is used for visual display and to display certain elements of se
 
 \begin{figure}[h!]
 	\centering
- 	\includegraphics[width=0.60\textwidth]{images/InputSubsystem}
+ 	\includegraphics[width=0.60\textwidth]{images/Touchscreen}
  \caption{Touchscreen}
 \end{figure}
 
@@ -121,7 +121,7 @@ The touch screen main responsibility is to function as a visual output and as a 
     \begin{tabular}{|  p{1cm}  |p{6cm}  |p{3cm}  |p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#1& Takes input from the user by pressing on the screen also displays visuals& User input& \pbox{3cm}{UserSettings}\pbox{3cm}{Sound Settings}\\\hline
+    \#1& Takes input from the user by pressing on the screen also displays visuals& User input& \pbox{3cm}{User Settings} Sound Settings\\\hline
     \end{tabular}
 \end{center}
 \end{table}
