--- a/architectural design specification latex/tex/output_layer_subsystems.tex
+++ b/architectural design specification latex/tex/output_layer_subsystems.tex
@@ -37,8 +37,7 @@ onvert the analog signals into audible sound
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#1 & representing the final sound output from the Sound Multiplexer & \pbox{3cm}{Analog signals representing the final sound output} & \pbox{3cm}{Audible sound}  \\ \hline
-   
+    \#1 & Representing the final sound output from the Sound Multiplexer&Analog signals representing the final sound output & Audible sound  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
