DDS start input layer is half finished

--- a/detailed design specification latex/detailed_design_specification.tex
+++ b/detailed design specification latex/detailed_design_specification.tex
@@ -27,14 +27,14 @@
 
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
-\newcommand{\teamname}{Team Name}
-\newcommand{\productname}{Product Name}
+\newcommand{\teamname}{SegFault}
+\newcommand{\productname}{Laser Harp}
 \newcommand{\coursename}{CSE 4317: Senior Design II}
-\newcommand{\semester}{Spring 2016}
+\newcommand{\semester}{Fall 2024}
 \newcommand{\docname}{Detailed Design Specification}
 \newcommand{\department}{Department of Computer Science \& Engineering}
 \newcommand{\university}{The University of Texas at Arlington}
-\newcommand{\authors}{Alan Turing \\ Grace Hopper \\ John Von Neumann \\ Ada Lovelace \\ Charles Babbage}
+\newcommand{\authors}{Thomas Pinkney \\ Matthew Moran \\ Simon Aguirre  \\ Alex Tran}
 
 %%% Headers and footers
 \usepackage{fancyhdr}
@@ -85,11 +85,8 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{0.1}{1.01.2016}{GH}{document creation}
-  	\vhEntry{0.2}{1.05.2016}{AT|GH}{complete draft}
-  	\vhEntry{0.3}{1.12.2016}{AT|GH}{release candidate 1}
-  	\vhEntry{1.0}{1.20.2016}{AT|GH|CB}{official release}
-  	\vhEntry{1.1}{1.31.2016}{AL}{added design review requests}
+  	\vhEntry{0.1}{09/20/24}{TP|MM|AT|SA}{document creation}
+  	
 \end{versionhistory}
 \newpage
 
@@ -112,8 +109,8 @@
 %\section{Subsystem Definitions \& Data Flow}
 %\input{tex/data_flow.tex}
 \newpage
-\section{X Layer Subsystems}
-\input{tex/x_layer_subsystems.tex}
+\section{Input Layer Subsystems}
+\input{tex/Input Layer}
 \newpage
 \section{Y Layer Subsystems}
 \input{tex/y_layer_subsystems.tex}
