--- a/detailed design specification latex/detailed_design_specification.tex
+++ b/detailed design specification latex/detailed_design_specification.tex
@@ -110,7 +110,7 @@
 %\input{tex/data_flow.tex}
 \newpage
 \section{Input Layer Subsystems}
-\input{tex/Input Layer}
+\input{tex/Inputlayer}
 \newpage
 \section{Y Layer Subsystems}
 \input{tex/y_layer_subsystems.tex}
