control unit updated

--- a/detailed design specification latex/detailed_design_specification.tex
+++ b/detailed design specification latex/detailed_design_specification.tex
@@ -112,7 +112,7 @@
 \section{Input Layer Subsystems}
 \input{tex/Inputlayer}
 \newpage
-\section{Y Layer Subsystems}
+\section{Control Unit Subsystems}
 \input{tex/y_layer_subsystems.tex}
 \newpage
 \section{Z Layer Subsystems}
